--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.jpa.show-sql=true
+## PostgreSQL
+spring.jpa.properties.hibernate.dialect = ${DIALECT}
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url = ${DATABASE_URL}:${PORT}/${DBNAME}
+spring.datasource.username = ${USERNAME}
+spring.datasource.password = ${PASSWORD}
+spring.jpa.generate-ddl=true
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
