--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.jpa.show-sql=true
-## PostgreSQL
-spring.jpa.properties.hibernate.dialect = ${DIALECT}
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url = ${DATABASE_URL}:${PORT}/${DBNAME}
+# Datasource
+spring.datasource.url = jdbc:postgresql://${DATABASE_URL}:${PORT}/${DBNAME}
 spring.datasource.username = ${USERNAME}
 spring.datasource.password = ${PASSWORD}
-spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
