--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,14 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.2.6.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
