--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/retraining?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+## PostgreSQL
+spring.jpa.properties.hibernate.dialect = ${DIALECT}
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url = ${DATABASE_URL}:${PORT}/${DBNAME}
+spring.datasource.username = ${USERNAME}
+spring.datasource.password = ${PASSWORD}
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.security.user.name=default
-spring.security.user.password=default
-spring.security.user.roles=manager
+
+spring.mvc.view.prefix = /WEB-INF/jsp/
+spring.mvc.view.suffix = .jsp
+
+logging.file.path=.
